<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Agit</string>
    <string name="app_strap">Android Git Client</string>

    <string name="commits">Commits</string>
    <string name="files">Files</string>

    <string name="suggest_repos_button">Suggest repos...</string>
    <string name="about_app_menu_option">About</string>
    <string name="about_activity_title">About...</string>
    <string name="welcome_message">"Welcome to Agit.\nGet started by #clone[cloning] a repository."</string>
    <string name="using_ssh_activity_title">SSH Install Guide</string>
    <string name="clone_launcher_activity_title">Clone...</string>
    <string name="clone_menu_option">Clone...</string>
    <string name="settings_app_menu_option">Settings...</string>
    <string name="enter_clone_url">Url</string>
    <string name="clone_target_folder_label">Target Folder</string>
    <string name="clone_url_hint">Repository url</string>
    <string name="clone_directory_hint">Folder for checkout</string>
    <string name="clone_readiness_needs_user_to_enter_a_url">Enter a repository url - or choose from some
        #suggest_repo[example repos].
    </string>
    <string name="clone_readiness_folder_already_exists">Folder already exists- #specify_target_dir[specify an
        alternative] location?
    </string>
    <string name="clone_readiness_repository_folder_already_exists">Folder already exists locally- view
        #view_existing_repo[existing repo]?
    </string>
    <string name="clone_readiness_not_enough_room_on_partition">"Not enough room - only %1$s of space available to Agit on this partition."</string>
    <string name="ssh_agent_not_correctly_installed">No SSH-agent available - view #view_ssh_instructions[SSH setup
        guide]?
    </string>

    <string name="repo_list_title">Local Repositories</string>

    <string name="use_default_target_directory_checkbox_label">Use default location</string>
    <string name="bare_repo_checkbox_label">Bare</string>


    <string name="execute_clone_button_label">Clone!</string>
    <string name="open_menu_option">Open...</string>
    <string name="find_files_menu_option">Find files...</string>
    <string name="filter_files_on_ref_hint">"Filter files on %1$s"</string>
    <string name="delete_menu_option">Delete</string>
    <string name="delete_repo_menu_option">Delete Repo</string>
    <string name="delete_tag_menu_option">Delete Tag</string>

    <string name="latest_commit_title">Latest Commit</string>
    <string name="empty_list">« none »</string>

    <string name="tag_name_label">Name:</string>
    <string name="tag_message_label">Message (optional):</string>
    <string name="checkout_commit_menu_option">Checkout...</string>
    <string name="tag_commit_menu_option">Tag...</string>

    <string name="clone_menu_option">Clone</string>
    <string name="clone_launcher_farewell_due_to_clone_launched">Clone started..!</string>
    <string name="object_id_copied">copied to clipboard!</string>

    <string name="ask_host_key_ok_ticker">"Host %1$s SSH fingerprint..."</string>
    <string name="ask_host_key_ok">"%1$s has key fingerprint: %2$s OK?"</string>

    <string name="open_git_repository">"Open Git repository"</string>
    <string name="install_file_manager">"To open a Git repository already stored on your device, install OI File Manager to enable file browsing."</string>
    <string name="can_not_open_non_git_folder">"Can't open %1$s - doesn't appear to be a Git repository?"</string>
    <string name="market_button">"Google Play..."</string>

    <string name="diff_seekbar_before">BEFORE</string>
    <string name="diff_seekbar_after">AFTER</string>

    <!-- Button label to answer "Yes" to a yes/no prompt -->
    <string name="button_yes">"Yes"</string>
    <!-- Button label to answer "No" to a yes/no prompt -->
    <string name="button_no">"No"</string>
    <string name="button_cancel">"Cancel"</string>

    <string name="repo_deletion_dialog_confirmation_title">"Delete repo..."</string>
    <string name="repo_deletion_dialog_confirmation_message">"Are you sure want to delete this Git repository?"</string>

    <string name="operation_complete">"%1$s complete"</string>
    <string name="operation_cancelled">"%1$s cancelled"</string>
    <string name="operation_failed">"%1$s failed"</string>

    <string name="clone">"Clone"</string>
    <string name="cloning">"Cloning"</string>
    <string name="cloning_repo">"Cloning %1$s"</string>
    <string name="cloned_repo">"Cloned %1$s"</string>

    <string name="pull">"Pull"</string>
    <string name="pulling">"Pulling"</string>
    <string name="pulling_repo">"Pulling %1$s"</string>
    <string name="fetch">"Fetch"</string>
    <string name="fetching">"Fetching"</string>
    <string name="fetched_from_remote_on_repo">"Fetched from %1$s on %2$s"</string>
    <string name="fetching_from_remote_on_repo">"Fetching from %1$s on %2$s"</string>
    <string name="delete_repo">"Delete Repo"</string>


    <string name="pulling_from_remote_on_repo">"Pulling from %1$s on %2$s"</string>
    <string name="pulled_from_remote">"Pulled from %1$s"</string>
    <string name="merge_status">"Merge status : %1$s"</string>
    <string name="pull_cancelled">"Pull cancelled"</string>
    <string name="ref_not_resolved">"Ref {0} can not be resolved"</string>

    <string name="missing_configuration_for_key">"No value for section '%1$s', subsection '%2$s', name '%3$s' found in
        configuration"
    </string>
    <string name="can_not_pull_on_a_repo_with_state">"Cannot pull into a repository with state: %1$s"</string>
    <string name="can_not_pull_on_a_repo_with_detached_head">"Cannot pull into a repository with a detached HEAD - first
        checkout a branch"
    </string>

    <string name="no_viewer_available_for_file">"No viewer available for '%1$s'"</string>

    <!-- Settings Strings -->
    <string name="settings">Settings</string>
    <string name="settings_category_sync">Sync Settings</string>
    <string name="setting_title_sync_frequency">Sync Frequency</string>
    <string name="setting_instruction_sync_frequency">Tap to set how often repository synchronization will occur</string>
    <string name="setting_sync_frequency_key">setting_sync_frequency</string>

    <string name="setting_sync_frequency_daily">0</string>
    <string name="setting_sync_frequency_daily_title">Sync daily at</string>
    <string name="setting_sync_frequency_daily_hour_key">setting_sync_frequency_daily_hour</string>
    <string name="setting_sync_frequency_daily_min_key">setting_sync_frequency_daily_min</string>
    <string name="setting_sync_frequency_subtitle_key">setting_sync_frequency_subtitle</string>

    <!--
         These next two arrays need to be in sync (no pun intended). In other words, if you change
         setting_sync_choices to have another value, you need to put a corresponding integer value
         into the setting_sync_choices_values
      -->
    <string-array name="setting_sync_choices">
        <item>Manually</item>
        <item>Schedule daily at&#8230;</item>
        <item>Every minute</item>
        <item>Every 5 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every hour</item>
        <item>Every 4 hours</item>
        <item>Every day</item>
        <item>Every week</item>
    </string-array>

    <!-- These next values are in MINUTES (except for the special values for "Manually" and "Sync Daily" -->
    <string-array name="setting_sync_choices_values">
        <item>-1</item>
        <item>@string/setting_sync_frequency_daily</item>
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>60</item>
        <item>240</item>
        <item>1440</item>
        <item>10080</item>
    </string-array>
</resources>
